--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -20,9 +20,11 @@
         "formulahendry.auto-close-tag",
         "formulahendry.auto-rename-tag",
         "GitHub.copilot",
+        "github.vscode-pull-request-github",
         "ivangabriele.vscode-heroku",
         "ms-azuretools.vscode-docker",
         "msjsdiag.vscode-react-native",
+        "pkosta2005.heroku-command",
         "rvest.vs-code-prettier-eslint",
         "steoates.autoimport",
         "Tyriar.lorem-ipsum",
