--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -2,9 +2,7 @@
 exclude: ^(notes/)
 repos:
   - hooks:
-      - args:
-          - --branch
-          - master
+      - args: [--branch, master]
         id: no-commit-to-branch
       - id: check-added-large-files
       - id: check-case-conflict
@@ -17,8 +15,16 @@ repos:
       - id: mixed-line-ending
       - id: trailing-whitespace
     repo: https://github.com/pre-commit/pre-commit-hooks
-    rev: v4.3.0
-  - hooks:
-      - id: prettier
-    repo: https://github.com/pre-commit/mirrors-prettier
-    rev: v3.0.0-alpha.0
+    rev: v4.4.0
+  - repo: https://github.com/pre-commit/mirrors-eslint
+    rev: v8.31.0
+    hooks:
+      - id: eslint
+  - repo: https://github.com/lyz-code/yamlfix/
+    rev: 1.3.1
+    hooks:
+      - id: yamlfix
+  - repo: https://github.com/AleksaC/circleci-cli-py
+    rev: v0.1.22924
+    hooks:
+      - id: circle-ci-validator
