--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,7 @@ x-app: &default-app
     dockerfile: Dockerfile
   restart: ${DOCKER_RESTART_POLICY:-unless-stopped}
 
-version: "3.8"
+version: '3.8'
 services:
   web:
     <<: *default-app
