--- a/package.json
+++ b/package.json
@@ -22,11 +22,16 @@
   "devDependencies": {
     "@babel/core": "7.12.9",
     "@typescript-eslint/parser": "5.48.0",
-    "eslint": "8.31.0",
+    "eslint": "5.16.0",
+    "eslint-config-google": "0.14.0",
+    "eslint-plugin-react": "7.31.11",
     "jest": "26.6.3",
     "jest-expo": "47.0.1",
     "prettier": "2.8.1",
     "typescript": "4.6.3"
   },
-  "private": true
+  "private": true,
+  "repository": "https://github.com/maferelo/automata-frontend.git",
+  "author": "Felipe Restrepo <maferelo13@gmail.com>",
+  "license": "MIT"
 }
