--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "@typescript-eslint/parser": "5.48.0",
     "eslint": "5.16.0",
     "eslint-config-google": "0.14.0",
+    "eslint-config-prettier": "8.6.0",
+    "eslint-plugin-prettier": "4.2.1",
     "eslint-plugin-react": "7.31.11",
     "jest": "26.6.3",
     "jest-expo": "47.0.1",
