--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -2,7 +2,12 @@
   "env": {
     "node": true
   },
-  "extends": ["eslint:recommended", "plugin:react/recommended", "prettier"],
+  "extends": [
+    "eslint:recommended",
+    "plugin:react/recommended",
+    "eslint-config-google",
+    "prettier"
+  ],
   "overrides": [],
   "parserOptions": {
     "ecmaVersion": 6,
