--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -16,10 +16,13 @@ repos:
       - id: trailing-whitespace
     repo: https://github.com/pre-commit/pre-commit-hooks
     rev: v4.4.0
-  - repo: https://github.com/pre-commit/mirrors-eslint
-    rev: v8.31.0
+  - repo: local
     hooks:
       - id: eslint
+        name: eslint
+        entry: yarn eslint
+        language: node
+        types: [javascript]
   - repo: https://github.com/lyz-code/yamlfix/
     rev: 1.3.1
     hooks:
