--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -18,6 +18,8 @@
   },
   "plugins": ["react", "prettier"],
   "rules": {
+    "arrow-body-style": "off",
+    "prefer-arrow-callback": "off",
     "react/jsx-uses-react": "off",
     "react/react-in-jsx-scope": "off"
   },
