anonymos not to override node modules

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -30,6 +30,7 @@ services:
     command: sleep infinity
     volumes:
       - .:/app:cache
+      - /app/node_modules
       - ~/.bash_history:/home/vscode/.bash_history:cache
       - extensions-cache:/home/vscode/.vscode-server/extensions:cache
 volumes:
