--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -52,7 +52,7 @@ jobs:
           name: Run pre-commit
           command: >-
             docker compose run web /bin/bash
-            -c "ls -al && sudo chown -R vscode:vscode . && ~/.local/bin/pre-commit run -a"
+            -ic "sudo chown -R vscode:vscode . && ~/.local/bin/pre-commit run -a"
 workflows:
   lint-and-test:
     jobs:
