--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "devDependencies": {
     "@babel/core": "7.12.9",
+    "@expo/ngrok": "4.1.0",
     "@typescript-eslint/parser": "5.48.0",
     "eslint": "5.16.0",
     "eslint-config-google": "0.14.0",
