--- a/package.json
+++ b/package.json
@@ -17,12 +17,16 @@
     "react": "18.1.0",
     "react-dom": "18.1.0",
     "react-native": "0.70.5",
+    "react-native-gesture-handler": "2.8.0",
+    "react-native-reanimated": "2.12.0",
     "react-native-web": "0.18.9"
   },
   "devDependencies": {
     "@babel/core": "7.12.9",
+    "@babel/eslint-parser": "7.19.1",
     "@expo/ngrok": "4.1.0",
     "@typescript-eslint/parser": "5.48.0",
+    "babel-eslint": "10.1.0",
     "eslint": "5.16.0",
     "eslint-config-google": "0.14.0",
     "eslint-config-prettier": "8.6.0",
@@ -31,6 +35,7 @@
     "jest": "26.6.3",
     "jest-expo": "47.0.1",
     "prettier": "2.8.1",
+    "react-devtools": "4.27.1",
     "typescript": "4.6.3"
   },
   "private": true,
