postcreate command git config fix dubioues wonershiip

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -48,6 +48,7 @@
     }
   },
   "dockerComposeFile": "../docker-compose.yml",
+  "postCreateCommand": "git config --global --add safe.directory /app",
   "service": "web",
   "workspaceFolder": "/app"
 }
