eslintrc config use new eslint-parser

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -9,9 +9,9 @@
     "prettier"
   ],
   "overrides": [],
-  "parser": "babel-eslint",
+  "parser": "@babel/eslint-parser",
   "parserOptions": {
-    "ecmaVersion": 6,
+    "ecmaVersion": 8,
     "sourceType": "module",
     "ecmaFeatures": {
       "modules": true
