--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@babel/core": "7.20.12",
+    "@babel/plugin-proposal-export-namespace-from": "7.18.9",
     "@expo/vector-icons": "13.0.0",
     "@expo/webpack-config": "0.17.4",
     "expo": "47.0.13",
@@ -22,7 +24,6 @@
     "react-native-web": "0.18.10"
   },
   "devDependencies": {
-    "@babel/core": "7.20.12",
     "@babel/eslint-parser": "7.19.1",
     "@expo/ngrok": "4.1.0",
     "@typescript-eslint/parser": "5.48.1",
