--- a/package.json
+++ b/package.json
@@ -15,12 +15,14 @@
     "@expo/webpack-config": "0.17.4",
     "expo": "47.0.13",
     "expo-image-picker": "14.0.2",
+    "expo-media-library": "15.0.0",
     "expo-status-bar": "1.4.2",
     "react": "18.1.0",
     "react-dom": "18.1.0",
     "react-native": "0.70.5",
     "react-native-gesture-handler": "2.8.0",
     "react-native-reanimated": "2.12.0",
+    "react-native-view-shot": "3.4.0",
     "react-native-web": "0.18.10"
   },
   "devDependencies": {
