--- a/package.json
+++ b/package.json
@@ -20,14 +20,17 @@
     "expo-status-bar": "1.4.2",
     "react": "18.1.0",
     "react-dom": "18.1.0",
+    "react-is": "18.2.0",
     "react-native": "0.70.5",
     "react-native-gesture-handler": "2.8.0",
     "react-native-reanimated": "2.12.0",
     "react-native-view-shot": "3.4.0",
-    "react-native-web": "0.18.10"
+    "react-native-web": "0.18.10",
+    "styled-components": "5.3.6"
   },
   "devDependencies": {
     "@babel/eslint-parser": "7.19.1",
+    "@babel/preset-env": "7.20.2",
     "@expo/ngrok": "4.1.0",
     "@typescript-eslint/parser": "5.48.1",
     "eslint": "8.31.0",
