--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@babel/eslint-parser": "7.19.1",
     "@babel/preset-env": "7.20.2",
     "@expo/ngrok": "4.1.0",
+    "@types/styled-components": "5.1.26",
     "@typescript-eslint/parser": "5.48.1",
     "eslint": "8.31.0",
     "eslint-config-google": "0.14.0",
