--- a/package.json
+++ b/package.json
@@ -6,9 +6,7 @@
     "start": "NODE_OPTIONS=--openssl-legacy-provider expo start --tunnel",
     "android": "NODE_OPTIONS=--openssl-legacy-provider expo start --android",
     "ios": "NODE_OPTIONS=--openssl-legacy-provider expo start --ios",
-    "web": "NODE_OPTIONS=--openssl-legacy-provider expo start --web",
-    "storybook": "NODE_OPTIONS=--openssl-legacy-provider start-storybook -p 6006",
-    "build-storybook": "NODE_OPTIONS=--openssl-legacy-provider build-storybook"
+    "web": "NODE_OPTIONS=--openssl-legacy-provider expo start --web"
   },
   "dependencies": {
     "@babel/core": "7.20.12",
@@ -34,29 +32,18 @@
     "@babel/eslint-parser": "7.19.1",
     "@babel/preset-env": "7.20.2",
     "@expo/ngrok": "4.1.0",
-    "@storybook/addon-actions": "6.5.15",
-    "@storybook/addon-essentials": "6.5.15",
-    "@storybook/addon-interactions": "6.5.15",
-    "@storybook/addon-links": "6.5.15",
-    "@storybook/builder-webpack4": "6.5.15",
-    "@storybook/manager-webpack4": "6.5.15",
-    "@storybook/react": "6.5.15",
-    "@storybook/testing-library": "0.0.13",
     "@types/styled-components": "5.1.26",
     "@typescript-eslint/parser": "5.48.1",
-    "babel-loader": "8.3.0",
     "eslint": "8.31.0",
     "eslint-config-google": "0.14.0",
     "eslint-config-prettier": "8.6.0",
     "eslint-plugin-prettier": "4.2.1",
     "eslint-plugin-react": "7.32.0",
-    "eslint-plugin-storybook": "0.6.10",
     "jest": "26.6.3",
     "jest-expo": "47.0.1",
     "prettier": "2.8.2",
     "react-devtools": "4.27.1",
-    "typescript": "4.9.4",
-    "webpack": "5.75.0"
+    "typescript": "4.9.4"
   },
   "private": true,
   "repository": "https://github.com/maferelo/automata-frontend.git",
