--- a/package.json
+++ b/package.json
@@ -3,13 +3,12 @@
   "version": "1.0.0",
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
-    "start": "NODE_OPTIONS=--openssl-legacy-provider expo start --tunnel",
+    "start": "NODE_OPTIONS=--openssl-legacy-provider expo start",
     "android": "NODE_OPTIONS=--openssl-legacy-provider expo start --android",
     "ios": "NODE_OPTIONS=--openssl-legacy-provider expo start --ios",
     "web": "NODE_OPTIONS=--openssl-legacy-provider expo start --web"
   },
   "dependencies": {
-    "@babel/core": "7.20.12",
     "@babel/plugin-proposal-export-namespace-from": "7.18.9",
     "@expo/vector-icons": "13.0.0",
     "@expo/webpack-config": "0.17.4",
@@ -29,6 +28,7 @@
     "styled-components": "5.3.6"
   },
   "devDependencies": {
+    "@babel/core": "7.20.12",
     "@babel/eslint-parser": "7.19.1",
     "@babel/preset-env": "7.20.2",
     "@expo/ngrok": "4.1.0",
