--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -28,14 +28,17 @@ services:
         YARN_VERSION: ${DEV_CONTAINER_YARN_VERSION:-1.22.19}
       dockerfile: .devcontainer/Dockerfile
     command: sleep infinity
-    ports: [192.168.1.11:19000:19000, 192.168.1.11:19006:19006]
+    environment:
+      - EXPO_DEVTOOLS_LISTEN_ADDRESS=0.0.0.0
+      - REACT_NATIVE_PACKAGER_HOSTNAME=192.168.1.11
+      - YAMLFIX_SEQUENCE_STYLE=block_style
+    ports:
+      - 192.168.1.11:19000:19000
+      - 192.168.1.11:19006:19006
     volumes:
       - .:/app:cache
       - /app/node_modules
       - ~/.bash_history:/home/vscode/.bash_history:cache
       - extensions-cache:/home/vscode/.vscode-server/extensions:cache
-    environment:
-      - EXPO_DEVTOOLS_LISTEN_ADDRESS=0.0.0.0
-      - REACT_NATIVE_PACKAGER_HOSTNAME=192.168.1.11
 volumes:
   extensions-cache:
