--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -2,7 +2,9 @@
 exclude: ^(notes/)
 repos:
   - hooks:
-      - args: [--branch, master]
+      - args:
+          - --branch
+          - master
         id: no-commit-to-branch
       - id: check-added-large-files
       - id: check-case-conflict
@@ -11,7 +13,8 @@ repos:
       - id: check-yaml
       - id: detect-private-key
       - id: end-of-file-fixer
-        exclude_types: [json]
+        exclude_types:
+          - json
       - id: fix-byte-order-marker
       - id: mixed-line-ending
       - id: trailing-whitespace
@@ -23,7 +26,8 @@ repos:
         name: eslint
         entry: yarn run eslint
         language: node
-        types: [javascript]
+        types:
+          - javascript
   - repo: https://github.com/lyz-code/yamlfix/
     rev: 1.3.1
     hooks:
