--- a/package.json
+++ b/package.json
@@ -3,19 +3,20 @@
   "version": "1.0.0",
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
+    "start-android": "NODE_OPTIONS=--openssl-legacy-provider expo start --android",
+    "start-ios": "NODE_OPTIONS=--openssl-legacy-provider expo start --ios",
+    "start-web": "NODE_OPTIONS=--openssl-legacy-provider expo start --web",
     "start": "NODE_OPTIONS=--openssl-legacy-provider expo start",
-    "android": "NODE_OPTIONS=--openssl-legacy-provider expo start --android",
-    "ios": "NODE_OPTIONS=--openssl-legacy-provider expo start --ios",
-    "web": "NODE_OPTIONS=--openssl-legacy-provider expo start --web",
+    "storybook-build": "NODE_OPTIONS=--openssl-legacy-provider build-storybook",
     "storybook": "NODE_OPTIONS=--openssl-legacy-provider start-storybook -p 7007",
-    "build-storybook": "NODE_OPTIONS=--openssl-legacy-provider build-storybook"
+    "test": "jest"
   },
   "dependencies": {
     "@babel/plugin-proposal-export-namespace-from": "7.18.9",
-    "@babel/plugin-proposal-private-methods": "^7.18.6",
+    "@babel/plugin-proposal-private-methods": "7.18.6",
     "@expo/vector-icons": "13.0.0",
     "@expo/webpack-config": "0.17.4",
-    "@react-native-async-storage/async-storage": "~1.17.3",
+    "@react-native-async-storage/async-storage": "1.17.3",
     "dom-to-image": "2.6.0",
     "expo": "47.0.13",
     "expo-image-picker": "14.0.2",
@@ -51,18 +52,18 @@
     "@storybook/addon-ondevice-controls": "6.0.1-beta.9",
     "@storybook/addon-ondevice-knobs": "6.0.1-beta.11",
     "@storybook/addon-ondevice-notes": "6.0.1-beta.9",
-    "@storybook/addon-react-native-web": "^0.0.19",
+    "@storybook/addon-react-native-web": "0.0.19",
     "@storybook/addons": "6.5.15",
     "@storybook/api": "6.5.15",
     "@storybook/components": "6.5.15",
     "@storybook/core-events": "6.5.15",
-    "@storybook/react": "^6.5",
+    "@storybook/react": "6.5.15",
     "@storybook/react-native": "6.0.1-beta.9",
     "@storybook/theming": "6.5.15",
     "@types/styled-components": "5.1.26",
     "@typescript-eslint/parser": "5.48.1",
-    "babel-loader": "^8.2.3",
-    "babel-plugin-react-native-web": "^0.18.10",
+    "babel-loader": "8.2.3",
+    "babel-plugin-react-native-web": "0.18.10",
     "eslint": "8.31.0",
     "eslint-config-google": "0.14.0",
     "eslint-config-prettier": "8.6.0",
@@ -76,8 +77,17 @@
     "regenerator-runtime": "0.13.11",
     "require-from-string": "2.0.2",
     "typescript": "4.9.4",
-    "webpack": "4",
-    "webpack-dev-server": "3"
+    "webpack": "4.46.0",
+    "webpack-dev-server": "3.11.3"
+  },
+  "jest": {
+    "preset": "jest-expo",
+    "transformIgnorePatterns": [
+      "node_modules/(?!(jest-)?@react-native|react-native|react-clone-referenced-element|@react-native-community|expo(nent)?|@expo(nent)?/.*|react-navigation|@react-navigation/.*|@unimodules/.*|unimodules|sentry-expo|native-base)"
+    ],
+    "setupFilesAfterEnv": [
+      "<rootDir>/__mocks__/globalMock.js"
+    ]
   },
   "private": true,
   "repository": "https://github.com/maferelo/automata-frontend.git",
