--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,13 +1,14 @@
 {
   "env": {
     "browser": true,
-    "node": true,
-    "es6": true
+    "es6": true,
+    "jest": true,
+    "node": true
   },
   "extends": [
+    "eslint-config-google",
     "eslint:recommended",
     "plugin:react/recommended",
-    "eslint-config-google",
     "prettier"
   ],
   "overrides": [],
@@ -17,8 +18,8 @@
   },
   "plugins": ["react", "prettier"],
   "rules": {
-    "no-console": 2,
     "arrow-body-style": "off",
+    "no-console": 2,
     "prefer-arrow-callback": "off",
     "react/jsx-uses-react": "off",
     "react/react-in-jsx-scope": "off"
