--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -35,7 +35,7 @@ jobs:
       - run:
           name: Run pre-commit
           command: >-
-            docker compose run web yarn test
+            docker exec -it --user=vscode web bash --login -c "yarn -v"
 workflows:
   lint-and-test:
     jobs:
