--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -35,7 +35,7 @@ jobs:
       - run:
           name: Run pre-commit
           command: >-
-            docker compose run -it --user=vscode web bash --login -c "yarn -v"
+            docker compose run /home/vscode/.nvm/versions/node/v18.2.0/bin/yarn test
 workflows:
   lint-and-test:
     jobs:
