--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -37,6 +37,18 @@ jobs:
           command: >-
             docker compose run web /bin/bash
             -ic "~/.nvm/versions/node/v18.2.0/bin/yarn test"
+    trial:
+      executor: ubuntu-executor
+      steps:
+        - checkout
+        - run:
+            name: Build Docker image
+            command: docker compose build
+        - run:
+            name: Run pre-commit
+            command: >-
+              docker compose run web /bin/bash
+              -ic "yarn test"
 workflows:
   lint-and-test:
     jobs:
@@ -46,4 +58,7 @@ workflows:
       - test:
           context:
             - context
+      - trial:
+          context:
+              -context
 # VS Code Extension Version: 1.5.1
