--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -23,8 +23,8 @@ jobs:
       - run:
           name: Run pre-commit
           command: >-
-            docker compose run web /bin/bash
-            -ic "sudo chown -R vscode:vscode . && ~/.local/bin/pre-commit run -a"
+            docker compose run web /bin/bash -ic 
+              "sudo chown -R vscode:vscode . && pre-commit run -a"
   test:
     executor: ubuntu-executor
     steps:
@@ -35,29 +35,8 @@ jobs:
       - run:
           name: Run pre-commit
           command: >-
-            docker compose run web /bin/bash -ic "yarn test"
-  trial:
-    executor: ubuntu-executor
-    steps:
-      - checkout
-      - run:
-          name: Build Docker image
-          command: docker compose build
-      - run:
-          name: Run pre-commit
-          command: >-
-            docker compose run -u vscode web /bin/bash -ic "pre-commit run -a"
-  trials:
-    executor: ubuntu-executor
-    steps:
-      - checkout
-      - run:
-          name: Build Docker image
-          command: docker compose build
-      - run:
-          name: Run pre-commit
-          command: >-
-            docker compose run -u vscode web /bin/bash -ic "sudo chown -R vscode:vscode . && pre-commit run -a"
+            docker compose run web /bin/bash -ic 
+              "yarn test"
 workflows:
   lint-and-test:
     jobs:
@@ -67,10 +46,4 @@ workflows:
       - test:
           context:
             - context
-      - trial:
-          context:
-              -context
-      - trials:
-          context:
-              -context
 # VS Code Extension Version: 1.5.1
