--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -37,6 +37,18 @@ jobs:
           command: >-
             docker compose run web /bin/bash -ic 
             "yarn test"
+  trials:
+    executor: ubuntu-executor
+    steps:
+      - checkout
+      - run:
+          name: Build Docker image
+          command: docker compose build
+      - run:
+          name: Run pre-commit
+          command: >-
+            docker compose run web bash -ic 
+            "yarn test"
 workflows:
   lint-and-test:
     jobs:
@@ -44,6 +56,9 @@ workflows:
           context:
             - context
       - test:
+          context:
+            - context
+      - trials:
           context:
             - context
 # VS Code Extension Version: 1.5.1
