--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -35,7 +35,7 @@ services:
     ports:
       - 19000:19000
       - 19006:19006
-    user: 1000
+    user: '1000'
     volumes:
       - .:/app:cache
       - /app/node_modules
