--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,13 +1,13 @@
 ---
+version: '3.8'
 x-app: &default-app
   build:
     dockerfile: Dockerfile
   restart: ${DOCKER_RESTART_POLICY:-unless-stopped}
   tty: true
 
-version: '3.8'
 services:
-  web:
+  app:
     <<: *default-app
     build:
       args:
