devconainer fix extensions cache
cache whole extensions folder

--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -59,7 +59,7 @@ USER vscode
 RUN \
     mkdir -p \
     ~/.cache \
-    ~/.vscode-server/extensions \
+    ~/.vscode-server \
     ;
 
 # Install nvm
