--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "@storybook/react": "6.5.15",
     "@storybook/react-native": "6.0.1-beta.9",
     "@storybook/theming": "6.5.15",
+    "@types/react-native": "0.70.6",
     "@types/styled-components": "5.1.26",
     "@typescript-eslint/parser": "5.48.1",
     "babel-loader": "8.2.3",
