--- a/package.json
+++ b/package.json
@@ -60,7 +60,11 @@
     "@storybook/react": "6.5.15",
     "@storybook/react-native": "6.0.1-beta.9",
     "@storybook/theming": "6.5.15",
+    "@tsconfig/react-native": "2.0.3",
+    "@types/jest": "29.2.6",
+    "@types/react": "18.0.27",
     "@types/react-native": "0.70.6",
+    "@types/react-test-renderer": "18.0.0",
     "@types/styled-components": "5.1.26",
     "@typescript-eslint/parser": "5.48.1",
     "babel-loader": "8.2.3",
