--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -2,17 +2,56 @@
 {
   "customizations": {
     "vscode": {
+      "extensions": [
+        "aaron-bond.better-comments",
+        "burkeholland.simple-react-snippets",
+        "byCedric.vscode-expo",
+        "christian-kohler.npm-intellisense",
+        "christian-kohler.path-intellisense",
+        "CircleCI.circleci",
+        "DavidAnson.vscode-markdownlint",
+        "dbaeumer.vscode-eslint",
+        "donjayamanne.githistory",
+        "dsznajder.es7-react-js-snippets",
+        "dzhavat.bracket-pair-toggler",
+        "eamodio.gitlens",
+        "esbenp.prettier-vscode",
+        "exiasr.hadolint",
+        "formulahendry.auto-close-tag",
+        "formulahendry.auto-rename-tag",
+        "GitHub.copilot",
+        "github.vscode-pull-request-github",
+        "ivangabriele.vscode-heroku",
+        "ms-azuretools.vscode-docker",
+        "msjsdiag.vscode-react-native",
+        "naumovs.color-highlight",
+        "oderwat.indent-rainbow",
+        "pkosta2005.heroku-command",
+        "rvest.vs-code-prettier-eslint",
+        "steoates.autoimport",
+        "Tyriar.lorem-ipsum",
+        "wix.vscode-import-cost",
+        "xabikos.javascriptsnippets"
+      ],
       "settings": {
+        "editor.codeActionsOnSave": {
+          "source.organizeImports": true
+        },
+        "editor.formatOnSave": true,
+        "editor.formatOnSaveMode": "file",
+        "editor.rulers": [88],
         "workbench.colorCustomizations": {
           "titleBar.activeBackground": "#00FFFF",
           "titleBar.activeForeground": "#000000"
         },
-        "window.title": "${localWorkspaceFolderBasename}${separator}${activeEditorShort}"
+        "window.title": "${localWorkspaceFolderBasename}${separator}${activeEditorShort}",
+        "yaml.format.enable": true
       }
     }
   },
   "dockerComposeFile": "../docker-compose.yml",
-  "postCreateCommand": "pre-commit install",
-  "service": "web",
+  "postCreateCommand": "/app/.devcontainer/post_create.sh",
+  "service": "app",
+  "waitFor": "postCreateCommand",
   "workspaceFolder": "/app"
 }
