--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -13,12 +13,26 @@ repos:
       - id: check-yaml
       - id: detect-private-key
       - id: end-of-file-fixer
+        exclude_types:
+          - json
       - id: fix-byte-order-marker
       - id: mixed-line-ending
       - id: trailing-whitespace
     repo: https://github.com/pre-commit/pre-commit-hooks
-    rev: v4.3.0
-  - hooks:
-      - id: prettier
-    repo: https://github.com/pre-commit/mirrors-prettier
-    rev: v3.0.0-alpha.0
+    rev: v4.4.0
+  - repo: local
+    hooks:
+      - id: eslint
+        name: eslint
+        entry: yarn run eslint
+        language: node
+        types:
+          - javascript
+  - repo: https://github.com/lyz-code/yamlfix/
+    rev: 1.3.1
+    hooks:
+      - id: yamlfix
+  - repo: https://github.com/AleksaC/circleci-cli-py
+    rev: v0.1.22924
+    hooks:
+      - id: circle-ci-validator
