--- a/package.json
+++ b/package.json
@@ -3,21 +3,96 @@
   "version": "1.0.0",
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
-    "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
-    "web": "expo start --web"
+    "start-android": "NODE_OPTIONS=--openssl-legacy-provider expo start --android",
+    "start-ios": "NODE_OPTIONS=--openssl-legacy-provider expo start --ios",
+    "start-web": "NODE_OPTIONS=--openssl-legacy-provider expo start --web",
+    "start": "NODE_OPTIONS=--openssl-legacy-provider expo start",
+    "storybook-build": "NODE_OPTIONS=--openssl-legacy-provider build-storybook",
+    "storybook": "NODE_OPTIONS=--openssl-legacy-provider start-storybook -p 7007",
+    "test": "jest"
   },
   "dependencies": {
-    "expo": "~47.0.9",
-    "expo-status-bar": "~1.4.2",
+    "@babel/plugin-proposal-export-namespace-from": "7.18.9",
+    "@babel/plugin-proposal-private-methods": "7.18.6",
+    "@expo/vector-icons": "13.0.0",
+    "@expo/webpack-config": "0.17.4",
+    "@react-native-async-storage/async-storage": "1.17.3",
+    "dom-to-image": "2.6.0",
+    "expo": "47.0.13",
+    "expo-image-picker": "14.0.2",
+    "expo-media-library": "15.0.0",
+    "expo-status-bar": "1.4.2",
     "react": "18.1.0",
+    "react-dom": "18.1.0",
+    "react-is": "18.2.0",
     "react-native": "0.70.5",
-    "@expo/vector-icons": "^13.0.0",
-    "expo-image-picker": "~14.0.2"
+    "react-native-gesture-handler": "2.8.0",
+    "react-native-reanimated": "2.12.0",
+    "react-native-safe-area-context": "4.4.1",
+    "react-native-view-shot": "3.4.0",
+    "react-native-web": "0.18.9",
+    "styled-components": "5.3.6"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.9"
+    "@babel/core": "7.20.12",
+    "@babel/eslint-parser": "7.19.1",
+    "@babel/preset-env": "7.20.2",
+    "@babel/preset-react": "7.18.6",
+    "@emotion/core": "10.0.27",
+    "@expo/ngrok": "4.1.0",
+    "@react-native-community/datetimepicker": "6.7.1",
+    "@react-native-community/slider": "4.4.0",
+    "@storybook/addon-actions": "6.5.15",
+    "@storybook/addon-controls": "6.5.15",
+    "@storybook/addon-essentials": "6.5.15",
+    "@storybook/addon-knobs": "6.4.0",
+    "@storybook/addon-links": "6.5.15",
+    "@storybook/addon-ondevice-actions": "6.0.1-beta.9",
+    "@storybook/addon-ondevice-backgrounds": "6.0.1-beta.9",
+    "@storybook/addon-ondevice-controls": "6.0.1-beta.9",
+    "@storybook/addon-ondevice-knobs": "6.0.1-beta.11",
+    "@storybook/addon-ondevice-notes": "6.0.1-beta.9",
+    "@storybook/addon-react-native-web": "0.0.19",
+    "@storybook/addons": "6.5.15",
+    "@storybook/api": "6.5.15",
+    "@storybook/components": "6.5.15",
+    "@storybook/core-events": "6.5.15",
+    "@storybook/react": "6.5.15",
+    "@storybook/react-native": "6.0.1-beta.9",
+    "@storybook/theming": "6.5.15",
+    "@tsconfig/react-native": "2.0.3",
+    "@types/jest": "29.2.6",
+    "@types/react": "18.0.27",
+    "@types/react-native": "0.70.6",
+    "@types/react-test-renderer": "18.0.0",
+    "@types/styled-components": "5.1.26",
+    "@typescript-eslint/parser": "5.48.1",
+    "babel-loader": "8.2.3",
+    "babel-plugin-react-native-web": "0.18.10",
+    "eslint": "8.31.0",
+    "eslint-config-google": "0.14.0",
+    "eslint-config-prettier": "8.6.0",
+    "eslint-plugin-prettier": "4.2.1",
+    "eslint-plugin-react": "7.32.0",
+    "jest": "26.6.3",
+    "jest-expo": "47.0.1",
+    "metro-react-native-babel-preset": "0.74.0",
+    "prettier": "2.8.2",
+    "react-devtools": "4.27.1",
+    "regenerator-runtime": "0.13.11",
+    "require-from-string": "2.0.2",
+    "typescript": "4.9.4",
+    "webpack": "4.46.0",
+    "webpack-dev-server": "3.11.3"
   },
-  "private": true
+  "jest": {
+    "preset": "jest-expo",
+    "transformIgnorePatterns": [
+      "node_modules/(?!(jest-)?@react-native|react-native|react-clone-referenced-element|@react-native-community|expo(nent)?|@expo(nent)?/.*|react-navigation|@react-navigation/.*|@unimodules/.*|unimodules|sentry-expo|native-base)"
+    ]
+  },
+  "private": true,
+  "repository": "https://github.com/maferelo/automata-frontend.git",
+  "author": "Felipe Restrepo <maferelo13@gmail.com>",
+  "license": "MIT"
 }
