--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -28,6 +28,17 @@ repos:
         language: node
         types:
           - javascript
+          - ts
+          - tsx
+  - repo: local
+    hooks:
+      - id: ts
+        name: ts
+        entry: yarn tsc
+        language: node
+        types:
+          - ts
+          - tsx
   - repo: https://github.com/lyz-code/yamlfix/
     rev: 1.3.1
     hooks:
