--- a/package.json
+++ b/package.json
@@ -17,6 +17,9 @@
     "@expo/vector-icons": "13.0.0",
     "@expo/webpack-config": "0.17.4",
     "@react-native-async-storage/async-storage": "1.17.11",
+    "@react-navigation/drawer": "6.5.7",
+    "@react-navigation/native": "6.1.2",
+    "@react-navigation/native-stack": "6.9.8",
     "dom-to-image": "2.6.0",
     "expo": "47.0.13",
     "expo-image-picker": "14.0.2",
@@ -29,6 +32,7 @@
     "react-native-gesture-handler": "2.8.0",
     "react-native-reanimated": "2.12.0",
     "react-native-safe-area-context": "4.4.1",
+    "react-native-screens": "3.18.0",
     "react-native-view-shot": "3.4.0",
     "react-native-web": "0.18.9",
     "styled-components": "5.3.6"
@@ -38,6 +42,7 @@
     "@babel/eslint-parser": "7.19.1",
     "@babel/preset-env": "7.20.2",
     "@babel/preset-react": "7.18.6",
+    "@babel/preset-typescript": "7.18.6",
     "@emotion/core": "11.0.0",
     "@expo/ngrok": "4.1.0",
     "@react-native-community/datetimepicker": "6.7.3",
@@ -81,6 +86,7 @@
     "react-devtools": "4.27.1",
     "regenerator-runtime": "0.13.11",
     "require-from-string": "2.0.2",
+    "ts-node": "10.9.1",
     "typescript": "4.9.4",
     "webpack": "4.46.0",
     "webpack-dev-server": "3.11.3"
