typescript basic values and setup

--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,14 @@
-node_modules/
 .expo/
-dist/
-npm-debug.*
 *.jks
-*.p8
-*.p12
 *.key
 *.mobileprovision
 *.orig.*
+*.p12
+*.p8
+coverage/
+dist/
+node_modules/
+npm-debug.*
 web-build/
 
 # macOS
