AddReminderComponent: basic button to show moddal

--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "start-ios": "NODE_OPTIONS=--openssl-legacy-provider expo start --ios",
     "start-web": "NODE_OPTIONS=--openssl-legacy-provider expo start --web",
     "start": "NODE_OPTIONS=--openssl-legacy-provider expo start",
-    "storybook-build": "NODE_OPTIONS=--openssl-legacy-provider build-storybook",
-    "storybook": "NODE_OPTIONS=--openssl-legacy-provider start-storybook -p 7007",
+    "storybook-build": "NODE_OPTIONS=--openssl-legacy-provider build-storybook --disable-telemetry",
+    "storybook": "NODE_OPTIONS=--openssl-legacy-provider start-storybook -p 7007 --disable-telemetry",
     "test": "jest --watch --coverage=false --changedSince=origin/main",
     "testDebug": "jest -o --watch --coverage=false",
     "testFinal": "jest",
@@ -74,6 +74,7 @@
     "@types/react-native": "0.71.0",
     "@types/react-test-renderer": "18.0.0",
     "@types/styled-components": "5.1.26",
+    "@types/styled-components-react-native": "5.2.1",
     "@typescript-eslint/parser": "5.49.0",
     "babel-loader": "8.2.3",
     "babel-plugin-react-native-web": "0.18.11",
