--- a/package.json
+++ b/package.json
@@ -10,9 +10,9 @@
     "storybook-build": "NODE_OPTIONS=--openssl-legacy-provider build-storybook --disable-telemetry",
     "storybook": "NODE_OPTIONS=--openssl-legacy-provider start-storybook -p 7007 --disable-telemetry",
     "test": "jest --watch --coverage=false --changedSince=origin/main",
-    "testDebug": "jest -o --watch --coverage=false",
-    "testFinal": "jest",
-    "updateSnapshots": "jest -u --coverage=false"
+    "test-debug": "jest -o --watch --coverage=false",
+    "test-final": "jest",
+    "update-snapshots": "jest -u --coverage=false"
   },
   "dependencies": {
     "@babel/plugin-proposal-export-namespace-from": "7.18.9",
