--- a/package.json
+++ b/package.json
@@ -23,11 +23,14 @@
     "@react-navigation/drawer": "6.5.7",
     "@react-navigation/native": "6.1.2",
     "@react-navigation/native-stack": "6.9.8",
+    "@rneui/base": "4.0.0-rc.7",
+    "@rneui/themed": "4.0.0-rc.7",
     "dom-to-image": "2.6.0",
     "expo": "47.0.13",
     "expo-image-picker": "14.0.2",
     "expo-media-library": "15.0.0",
     "expo-status-bar": "1.4.2",
+    "formik": "2.2.9",
     "react": "18.1.0",
     "react-dom": "18.1.0",
     "react-is": "18.2.0",
