--- a/package.json
+++ b/package.json
@@ -1,12 +1,11 @@
 {
   "name": "my-app",
   "version": "1.0.0",
-  "main": "node_modules/expo/AppEntry.js",
   "scripts": {
     "start-android": "NODE_OPTIONS=--openssl-legacy-provider expo start --android",
     "start-ios": "NODE_OPTIONS=--openssl-legacy-provider expo start --ios",
     "start-web": "NODE_OPTIONS=--openssl-legacy-provider expo start --web",
-    "start": "NODE_OPTIONS=--openssl-legacy-provider expo start",
+    "start": "expo start --dev-client",
     "storybook-build": "NODE_OPTIONS=--openssl-legacy-provider build-storybook",
     "storybook": "NODE_OPTIONS=--openssl-legacy-provider start-storybook -p 7007",
     "test": "jest --watch --coverage=false --changedSince=origin/main",
@@ -27,7 +26,9 @@
     "expo": "47.0.13",
     "expo-image-picker": "14.0.2",
     "expo-media-library": "15.0.0",
+    "expo-splash-screen": "0.17.5",
     "expo-status-bar": "1.4.2",
+    "expo-system-ui": "2.0.1",
     "react": "18.1.0",
     "react-dom": "18.1.0",
     "react-is": "18.2.0",
@@ -78,12 +79,13 @@
     "babel-loader": "8.2.3",
     "babel-plugin-react-native-web": "0.18.11",
     "babel-plugin-styled-components": "2.0.7",
+    "cypress": "12.6.0",
     "eslint": "8.32.0",
     "eslint-config-google": "0.14.0",
     "eslint-config-prettier": "8.6.0",
     "eslint-plugin-prettier": "4.2.1",
     "eslint-plugin-react": "7.32.1",
-    "jest": "27.5.1",
+    "jest": "29.4.2",
     "jest-expo": "47.0.1",
     "metro-react-native-babel-preset": "0.74.1",
     "prettier": "2.8.3",
