Fix cypress local setup no ip required

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -29,8 +29,10 @@ services:
       dockerfile: .devcontainer/Dockerfile
     command: sleep infinity
     environment:
-      - EXPO_DEVTOOLS_LISTEN_ADDRESS=0.0.0.0
-      - REACT_NATIVE_PACKAGER_HOSTNAME=192.168.1.11
+      - DOCKER_HOST_NAME=host.docker.internal
+      - DISPLAY=$DOCKER_HOST_NAMEhost.docker.internal:0
+      - EXPO_DEVTOOLS_LISTEN_ADDRESS=host.docker.internal
+      - REACT_NATIVE_PACKAGER_HOSTNAME=host.docker.internal
       - YAMLFIX_SEQUENCE_STYLE=block_style
     ports:
       - 19000:19000
