--- a/package.json
+++ b/package.json
@@ -2,18 +2,13 @@
   "name": "my-app",
   "version": "1.0.0",
   "scripts": {
-    "start-android": "NODE_OPTIONS=--openssl-legacy-provider expo start --android",
-    "start-ios": "NODE_OPTIONS=--openssl-legacy-provider expo start --ios",
-    "start-web": "NODE_OPTIONS=--openssl-legacy-provider expo start --web",
-    "start": "NODE_OPTIONS=--openssl-legacy-provider expo start --dev-client",
+    "ci": "start-server-and-test serve http://localhost:19006 test",
+    "serve": "NODE_OPTIONS=--openssl-legacy-provider expo start --web",
+    "start": "start-server-and-test serve http://localhost:19006 test-open",
     "storybook-build": "NODE_OPTIONS=--openssl-legacy-provider build-storybook",
     "storybook": "NODE_OPTIONS=--openssl-legacy-provider start-storybook -p 7007",
-    "test-ci": "jest",
-    "test-dbug": "jest -o --watch --coverage=false",
-    "test-e2e-ci": "cypress run",
-    "test-e2e": "cypress open",
-    "test-update": "jest -u --coverage=false",
-    "test": "jest --watch --coverage=false --changedSince=origin/main"
+    "test-open": "cypress open",
+    "test": "cypress run"
   },
   "dependencies": {
     "@babel/plugin-proposal-export-namespace-from": "7.18.9",
@@ -95,6 +90,7 @@
     "react-devtools": "4.27.1",
     "regenerator-runtime": "0.13.11",
     "require-from-string": "2.0.2",
+    "start-server-and-test": "2.0.0",
     "ts-node": "10.9.1",
     "typescript": "4.9.4",
     "webpack": "4.46.0",
