--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "scripts": {
     "ci": "DISPLAY= start-server-and-test serve http://localhost:19006 test",
-    "serve": "NODE_OPTIONS=--openssl-legacy-provider expo start --web",
+    "serve": "NODE_OPTIONS=--openssl-legacy-provider expo start --web --clear",
     "start": "start-server-and-test serve http://localhost:19006 test-open",
     "storybook-build": "NODE_OPTIONS=--openssl-legacy-provider build-storybook",
     "storybook": "NODE_OPTIONS=--openssl-legacy-provider start-storybook -p 7007",
@@ -19,6 +19,8 @@
     "@react-navigation/drawer": "6.5.7",
     "@react-navigation/native": "6.1.2",
     "@react-navigation/native-stack": "6.9.8",
+    "@reduxjs/toolkit": "1.9.3",
+    "axios": "1.3.4",
     "dom-to-image": "2.6.0",
     "expo": "47.0.13",
     "expo-image-picker": "14.0.2",
@@ -36,6 +38,8 @@
     "react-native-screens": "3.18.0",
     "react-native-view-shot": "3.4.0",
     "react-native-web": "0.18.9",
+    "react-redux": "8.0.5",
+    "redux": "4.2.1",
     "styled-components": "5.3.6"
   },
   "devDependencies": {
